# spec-pop

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.toml  custom.mplstyle
data/NIST/: nist_argon_raw.csv
src/specpop/: analysis.py  exporter.py  interface.py  line_data.py  main.py  plotter.py
src/specpop/data/NIST/: nist_argon_raw.csv
src/specpop/data/Vlcek/: excitation_levels.csv
